fix wrapping lines in Markup on Firefox

--- a/arhiv/src/ui/components/Markup.css
+++ b/arhiv/src/ui/components/Markup.css
@@ -75,7 +75,7 @@
     }
 
     pre {
-      @apply text-balance;
+      @apply whitespace-pre-line;
     }
 
     table {
